@@ -50,7 +50,7 @@ import org.gjt.sp.util.Log;
  * @see JEditTextArea
  *
  * @author Slava Pestov
- * @version $Id: TextAreaPainter.java,v 1.86 2003/06/05 04:44:41 spestov Exp $
+ * @version $Id: TextAreaPainter.java,v 1.87 2003/06/11 01:15:36 spestov Exp $
  */
 public class TextAreaPainter extends JComponent implements TabExpander
 {
@@ -791,6 +791,7 @@ public class TextAreaPainter extends JComponent implements TabExpander
 
 		setAutoscrolls(true);
 		setOpaque(true);
+		setRequestFocusEnabled(false);
 
 		setCursor(Cursor.getPredefinedCursor(Cursor.TEXT_CURSOR));
 
